# mullvadvpn-app

./: Cargo.toml
android/: build.sh
android/app/src/main/kotlin/net/mullvad/mullvadvpn/compose/screen/location/: SelectLocationList.kt  SelectLocationScreen.kt
android/docs/: BuildInstructions.macos.md
android/gradle/: libs.versions.toml
android/test/e2e/src/main/kotlin/net/mullvad/mullvadvpn/test/e2e/: ConnectionTest.kt  LaunchAppTest.kt  LeakTest.kt  LoginTest.kt  LogoutTest.kt
ios/MullvadVPN.xcodeproj/: project.pbxproj
ios/MullvadVPN/Localization/: LanguageManager.swift  ReversibleHStack.swift
ios/MullvadVPN/View controllers/ChangeLog/: BulletPointText.swift  ChangeLogView.swift
ios/MullvadVPN/Views/: MullvadPrimaryTextField.swift  MullvadSecondaryTextField.swift
mullvad-daemon/: Cargo.toml
mullvad-daemon/src/: management_interface.rs
mullvad-daemon/src/exception_logging/: win.rs
mullvad-daemon/src/migrations/: mod.rs
mullvad-daemon/src/version/: check.rs  router.rs
mullvad-management-interface/: Cargo.toml
mullvad-management-interface/src/: lib.rs
mullvad-paths/src/: cache.rs  lib.rs  logs.rs  unix.rs  windows.rs
mullvad-update/src/client/: app.rs
talpid-core/src/: resolver.rs  window.rs
talpid-core/src/dns/windows/: iphlpapi.rs  netsh.rs
talpid-core/src/split_tunnel/windows/: path_monitor.rs  windows.rs
talpid-ipc/: Cargo.toml
talpid-ipc/src/: lib.rs
talpid-openvpn/: Cargo.toml
talpid-openvpn-plugin/: Cargo.toml
talpid-openvpn-plugin/src/: processing.rs
talpid-openvpn/src/: lib.rs  wintun.rs
talpid-platform-metadata/src/: windows.rs
talpid-routing/src/windows/: default_route_monitor.rs
talpid-windows/src/: fs.rs  io.rs  net.rs  process.rs  sync.rs
talpid-wireguard/src/: ephemeral.rs  lib.rs
talpid-wireguard/src/boringtun/: mod.rs
talpid-wireguard/src/wireguard_go/: mod.rs
talpid-wireguard/src/wireguard_nt/: daita.rs  mod.rs
test/test-manager/src/tests/: dns.rs
test/test-manager/src/vm/: provision.rs
