[package]
name = "talpid-ipc"
description = "Tokio-based IPC adapter"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features =  ["net", "rt", "time"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs"] }
