[package]
name = "talpid-openvpn-plugin"
description = "OpenVPN shared library plugin for relaying OpenVPN events to talpid_core"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
talpid-types = { path = "../talpid-types" }
talpid-ipc = { path = "../talpid-ipc" }

thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

openvpn-plugin = { version = "0.4.2", features = ["serde", "log", "auth-failed-event"] }

tokio = { workspace = true, features =  ["rt"] }
tonic = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }
hyper-util = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = false, features = ["transport", "prost"] }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
mullvad-version = { path = "../mullvad-version" }

[target.'cfg(windows)'.build-dependencies.windows-sys]
workspace = true
features = [
    "Win32_System_SystemServices",
]

[package.metadata.winres]
ProductName = "Mullvad VPN"
CompanyName = "Mullvad VPN AB"
LegalCopyright = "(c) 2025 Mullvad VPN AB"
InternalName = "talpid-openvpn-plugin"
OriginalFilename = "talpid_openvpn_plugin.dll"

# TODO: Remove this once ARM64 Windows no longer requires x64 talpid_openvpn_plugin
[features]
api-override = []
